objects/Account_Function__c.object
<CustomObject>
    <description>Joins the Account objects in a many-to-many relationship</description>
    <label>Account Function</label>
    <nameField>
        <displayFormat>FID-{000000000}</displayFormat>
        <label>Account Function Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Functions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Key__c</fullName>
        <description>Concatenates &quot;PKI_SAP_Sold_To_Account_Number__c&quot; with &quot;PKI_SAP_Partner_Site__c&quot; with &quot;PKI_SAP_Partner_Type__c&quot;</description>
        <externalId>true</externalId>
        <inlineHelpText>Concatenates &quot;PKI_SAP_Sold_To_Account_Number__c&quot; with &quot;PKI_SAP_Partner_Site__c&quot; with &quot;PKI_SAP_Partner_Type__c&quot;</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source_Account__c</fullName>
        <label>Source Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SourceAccountFunctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TargetAccountFunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Sales_Org__c</fullName>
        <label>PKI SAP Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Partner_Type__c</fullName>
        <inlineHelpText>EN/Country of Ultimate Destination
RE/Bill-to
RG/Payer
WE/Ship-to
YA/Bill-to Local Language
YB/Ship-to Local Language
ZD/Payer (EEU2)
ZF/Replacement Shipping Address</inlineHelpText>
        <label>PKI SAP Partner Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Partner_Type_Name__c</fullName>
        <description>Long version of the PKI_SAP_Partner_Type__c field</description>
        <label>PKI SAP Partner Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Lookups_Last_Modified__c</fullName>
        <description>Used in the UpdateFunctionsAutomated.apxc to determine whether or not to include this record again.</description>
        <inlineHelpText>Used in the UpdateFunctionsAutomated.apxc to determine whether or not to include this record again.</inlineHelpText>
        <label>Date Lookups Last Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Source_Account_Number__c</fullName>
        <description>Represents the Source Customer Number</description>
        <label>PKI SAP Source Account Number</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Target_Account_Number__c</fullName>
        <description>Represents the Target Account Customer Number</description>
        <label>PKI SAP Target Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>